# kaggle-template

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  Taskfile.yml  pyproject.toml  requirements.txt  setup.sh  setup_config.json  todo.md
.claude/: CLAUDE.md
.claude/agents/architecture-validator/: agent.yaml
.claude/agents/debug-assistant/: agent.yaml
.claude/agents/refactoring-assistant/: agent.yaml
.claude/commands/: code-quality.md  git-commit.md  kaggle-submit.md  setup-python.md  setup.md  test-run.md  trackio.md  train.md
.claude/rules/: code-quality-tools.md  coding-standards.md  git-best-practices.md  kaggle-constraints.md  python-coding-standards.md  uv-package-management.md
.claude/skills/code-quality/: SKILL.md  tools-guide.md
.claude/skills/documentation/: SKILL.md  docs-guide.md
.claude/skills/experiment-tracking/: trackio-guide.md
.claude/skills/kaggle-workflow/: submission-guide.md
.claude/skills/performance-optimization/: gpu-tuning-guide.md
.claude/skills/testing/: SKILL.md  pytest-guide.md
.history/: CLAUDE_20251217092525.md
configs/: config.yaml
src/: utils.py
src/models/: base_model.py
src/utils/: config_utils.py  wandb_utils.py
